# jpg_paral

./: .gitignore  CMakeLists.txt  README.md  gui.py  jpeg_parallel.c  jpeg_parallel.h  main.c
include/: dct.h  jpeg_encoder.h  quantization.h
src/: dct.cpp  jpeg_encoder.cpp  python_bindings.cpp  quantization.cpp
test/: test_encoder.cpp
